--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-# Datasource configuration
+# DataSource Configuration
 quarkus.datasource.db-kind=h2
 quarkus.datasource.jdbc.url=jdbc:h2:mem:moviedb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 quarkus.datasource.username=sa
 quarkus.datasource.password=
-# Hibernate ORM configuration
+# Hibernate Configuration
+quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
+
